# Market-Data-QA---Factor-Store

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: sample_pipeline.sh
configs/: README.md  features.yaml  schemas.yaml  validation.yaml
data/qa/: validation_report_readme.json
data/sample/: market_ohlcv_sample.csv  ohlcv_sample.csv
docs/: index.html
features/: __init__.py  base.py  cache.py  cli.py  dollar_volume.py  materialize.py  mom_20d.py  registry.py  ret_1d.py  ret_5d.py  sample_loader.py  vol_20d.py
schemas/: __init__.py  market_ohlcv.py  rules.py
tests/: test_features.py  test_placeholder.py  test_sample_loader.py  test_schemas.py  test_validators.py  test_versioning.py
validators/: __init__.py  base.py  cli.py  duplicates.py  orchestrator.py  outliers.py  report.py  structural.py  temporal.py
versioning/: __init__.py  checksum.py  cli.py  manifest.py  snapshot.py
